refactor: use getFirst() for parameter retrieval in AnnotationOperationMethodBuilder